--- a/index.html
+++ b/index.html
@@ -56,37 +56,47 @@
   </div>
 
   <div class="container homepage">
-  	<h2>Get Involved</h2>
-  	<hr>
-    <div class="row">
-      <div class="col-md-4">
-      	<span class="fa-stack fa-3x">
-  		<i class="fas fa-circle fa-stack-2x"></i>
-  		<i class="fas fa-child fa-stack-1x fa-inverse"></i>
-		</span>
-        <h3>Students</h3>
-        <p>Want to learn how to code? Want to help us get to 1,000,000 lines?< Click the button below and we'll let you know how to get involved. </p>
-        <p><a class="btn btn-danger btn-secondary" href="#" role="button">Start Learning &raquo;</a></p>
-      </div>
-      <div class="col-md-4">
-      	<span class="fa-stack fa-3x">
-  		<i class="fas fa-circle fa-stack-2x"></i>
-  		<i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
-		</span>
-        <h3>Educators</h3>
-        <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen. </p>
-        <p><a class="btn btn-danger btn-secondary" href="#" role="button">Join the Initiative &raquo;</a></p>
-      </div>
-      <div class="col-md-4">
-      	<span class="fa-stack fa-3x">
-  		<i class="fas fa-circle fa-stack-2x"></i>
-  		<i class="fas fa-hand-holding-usd fa-stack-1x fa-inverse"></i>
-		</span>
-        <h3>Sponsors</h3>
-        <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
-        <p><a class="btn btn-danger btn-secondary" href="#" role="button">Give Support &raquo;</a></p>
-      </div>
+    <img class="academylogo" src="./first-website/images/academy_brand_med.png" title="Massive Academy" alt="MASSIVE Academy">
+    <h2>Who We Are</h2>
+    <hr>
+    <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+  </div>
+
+
+  <div id="get-envolved">
+    <div class="container homepage">
+    	<h2>Get Involved</h2>
+    	<hr>
+      <div class="row">
+        <div class="col-md-4">
+        <span class="fa-stack fa-3x">
+    		<i class="fas fa-circle fa-stack-2x"></i>
+    		<i class="fas fa-child fa-stack-1x fa-inverse"></i>
+  		  </span>
+          <h3>Students</h3>
+          <p>Want to learn how to code? Want to help us get to 1,000,000 lines?< Click the button below and we'll let you know how to get involved. </p>
+          <p><a class="btn btn btn-light btn-secondary" href="#" role="button">Start Learning &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+        	<span class="fa-stack fa-3x">
+    		<i class="fas fa-circle fa-stack-2x"></i>
+    		<i class="fas fa-user-graduate fa-stack-1x fa-inverse"></i>
+  		</span>
+          <h3>Educators</h3>
+          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen. </p>
+          <p><a class="btn btn btn-light btn-secondary" href="#" role="button">Join the Initiative &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+        	<span class="fa-stack fa-3x">
+    		<i class="fas fa-circle fa-stack-2x"></i>
+    		<i class="fas fa-hand-holding-usd fa-stack-1x fa-inverse"></i>
+  		</span>
+          <h3>Sponsors</h3>
+          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
+          <p><a class="btn btn btn-light btn-secondary" href="#" role="button">Give Support &raquo;</a></p>
+        </div>
     </div>
+  </div>
 
     <hr>
 
