--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 	    <ul class="nav navbar-nav ml-auto navbar-right">
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">WHO WE ARE <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#who-we-are">WHO WE ARE <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">GET INVOLVED</a>
+	        <a class="nav-link" href="#get-envolved">GET INVOLVED</a>
 	      </li>
 	    </ul>
 	  </div>
@@ -55,13 +55,14 @@
     </div>
   </div>
 
-  <div class="container homepage">
-    <img class="academylogo" src="./first-website/images/academy_brand_med.png" title="Massive Academy" alt="MASSIVE Academy">
-    <h2>Who We Are</h2>
-    <hr>
-    <p>We are <a href="http://www.massiveacademy.us" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+  <div id="who-we-are">
+    <div class="container homepage">
+      <img class="academylogo" src="./first-website/images/academy_brand_med.png" title="Massive Academy" alt="MASSIVE Academy">
+      <h2>Who We Are</h2>
+      <hr>
+      <p>We are <a href="http://massiveacademy.launchrock.com/" target="_blank">MASSIVE Academy</a>. We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</p>
+    </div>
   </div>
-
 
   <div id="get-envolved">
     <div class="container homepage">
@@ -95,23 +96,23 @@
           <p>We love all the support we get to help host more events, and empower more lives with the knowledge of coding. Click to get involved.</p>
           <p><a class="btn btn btn-light btn-secondary" href="#" role="button">Give Support &raquo;</a></p>
         </div>
+      </div>
     </div>
-  </div>
-
-    <hr>
-
-  </div> <!-- /container -->
+  </div> 
 
 </main>
 
-<footer class="container">
-  <p>&copy; Company 2017-2019</p>
+<footer>
+  <div class="container">
+    <p><img id="pngfooter" src="./first-website/images/One-Million-Bottom-Brand.png"></p>
 </footer>
+
+
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
 
-    <script src="./first-website/js/bootstrap.bundle.min.js"></script>
+  <script src="./first-website/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
