--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	  <a class="navbar-brand" href="#"><img src="first-website/images/top_logo.png" alt="One Milion Lines" title="One Milion Lines"></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+		  
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
+
 	  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 	    <ul class="nav navbar-nav ml-auto navbar-right">
 	      <li class="nav-item">
-	        <a class="nav-link" href="#who-we-are">WHO WE ARE <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" data-target=".navbar-collapse.show" href="#who-we-are">WHO WE ARE <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#get-envolved">GET INVOLVED</a>
+	        <a class="nav-link" data-target=".navbar-collapse.show" href="#get-envolved">GET INVOLVED</a>
 	      </li>
 	    </ul>
 	  </div>
@@ -113,6 +115,8 @@
   <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
 
   <script src="./first-website/js/bootstrap.bundle.min.js"></script>
+
+  <script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
